templates/bc-gogs/gogs-template.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: gogs-template
objects:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2018-03-21T15:52:32Z
    creationTimestamp: null
    generation: 2
    labels:
      app: gogs
    name: gogs
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: wkulhanek/gogs:11.34
      from:
        kind: DockerImage
        name: docker-registry.default.svc:5000/bc-gogs/gogs:11.34
      generation: 2
      importPolicy: {}
      name: "11.34"
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: gogs
    name: gogs
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: gogs
      deploymentconfig: gogs
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: gogs
          deploymentconfig: gogs
      spec:
        containers:
        - image: wkulhanek/gogs@sha256:783b5d5886ce83fa847e4b5d43700283bd4bfa59eb3c9beaad2221643b1c2785
          imagePullPolicy: IfNotPresent
          name: gogs
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: gogs-volume-1
          - mountPath: /opt/gogs/custom/conf
            name: config-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: gogs-volume-1
          persistentVolumeClaim:
            claimName: gogs-data
        - configMap:
            defaultMode: 420
            name: gogs
          name: config-volume
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - gogs
        from:
          kind: ImageStreamTag
          name: gogs:11.34
          namespace: bc-gogs
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    creationTimestamp: null
    generation: 1
    labels:
      app: postgresql_gogs
      template: postgresql-persistent-template
    name: postgresql
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: postgresql
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: postgresql_gogs
          name: postgresql
      spec:
        containers:
        - env:
          - name: POSTGRESQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: postgresql
          - name: POSTGRESQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: postgresql
          - name: POSTGRESQL_DATABASE
            valueFrom:
              secretKeyRef:
                key: database-name
                name: postgresql
          image: registry.access.redhat.com/rhscl/postgresql-95-rhel7@sha256:de66da4812f0de42cee0bef65899d75f8b1a7440858271f133c8f73c80be663d
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          name: postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
                'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: postgresql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - postgresql
        from:
          kind: ImageStreamTag
          name: postgresql:9.5
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: gogs
    name: gogs
  spec:
    host: gogs-bc-gogs.apps.acc.example.opentlc.com
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: gogs
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-03-21T15:53:02Z
        status: "True"
        type: Admitted
      host: gogs-bc-gogs.apps.acc.example.opentlc.com
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/created-by: |
        {"kind":"SerializedReference","apiVersion":"v1","reference":{"kind":"ReplicationController","namespace":"bc-gogs","name":"gogs-3","uid":"58a479bf-2d20-11e8-9d34-166b4f376a2c","apiVersion":"v1","resourceVersion":"1082186"}}
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for
        container gogs; cpu, memory limit for container gogs'
      openshift.io/deployment-config.latest-version: "3"
      openshift.io/deployment-config.name: gogs
      openshift.io/deployment.name: gogs-3
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: null
    generateName: gogs-3-
    labels:
      app: gogs
      deployment: gogs-3
      deploymentconfig: gogs
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: gogs-3
      uid: 58a479bf-2d20-11e8-9d34-166b4f376a2c
  spec:
    containers:
    - image: wkulhanek/gogs@sha256:783b5d5886ce83fa847e4b5d43700283bd4bfa59eb3c9beaad2221643b1c2785
      imagePullPolicy: IfNotPresent
      name: gogs
      ports:
      - containerPort: 3000
        protocol: TCP
      resources:
        limits:
          cpu: 500m
          memory: 1536Mi
        requests:
          cpu: 50m
          memory: 256Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        privileged: false
        runAsUser: 1001890000
        seLinuxOptions:
          level: s0:c43,c42
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /data
        name: gogs-volume-1
      - mountPath: /opt/gogs/custom/conf
        name: config-volume
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-bdpks
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-rjm8v
    nodeName: node5.acc.internal
    nodeSelector:
      env: users
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1001890000
      seLinuxOptions:
        level: s0:c43,c42
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    volumes:
    - name: gogs-volume-1
      persistentVolumeClaim:
        claimName: gogs-data
    - configMap:
        defaultMode: 420
        name: gogs
      name: config-volume
    - name: default-token-bdpks
      secret:
        defaultMode: 420
        secretName: default-token-bdpks
  status:
    phase: Pending
    qosClass: Burstable
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/created-by: |
        {"kind":"SerializedReference","apiVersion":"v1","reference":{"kind":"ReplicationController","namespace":"bc-gogs","name":"postgresql-1","uid":"d91605c3-2d1f-11e8-9d34-166b4f376a2c","apiVersion":"v1","resourceVersion":"715895"}}
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
        postgresql; cpu limit for container postgresql'
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: postgresql
      openshift.io/deployment.name: postgresql-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: null
    generateName: postgresql-1-
    labels:
      app: postgresql_gogs
      deployment: postgresql-1
      deploymentconfig: postgresql
      name: postgresql
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: postgresql-1
      uid: d91605c3-2d1f-11e8-9d34-166b4f376a2c
  spec:
    containers:
    - env:
      - name: POSTGRESQL_USER
        valueFrom:
          secretKeyRef:
            key: database-user
            name: postgresql
      - name: POSTGRESQL_PASSWORD
        valueFrom:
          secretKeyRef:
            key: database-password
            name: postgresql
      - name: POSTGRESQL_DATABASE
        valueFrom:
          secretKeyRef:
            key: database-name
            name: postgresql
      image: registry.access.redhat.com/rhscl/postgresql-95-rhel7@sha256:de66da4812f0de42cee0bef65899d75f8b1a7440858271f133c8f73c80be663d
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 3
        initialDelaySeconds: 30
        periodSeconds: 10
        successThreshold: 1
        tcpSocket:
          port: 5432
        timeoutSeconds: 1
      name: postgresql
      ports:
      - containerPort: 5432
        protocol: TCP
      readinessProbe:
        exec:
          command:
          - /bin/sh
          - -i
          - -c
          - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c 'SELECT
            1'
        failureThreshold: 3
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 50m
          memory: 512Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        privileged: false
        runAsUser: 1001890000
        seLinuxOptions:
          level: s0:c43,c42
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/lib/pgsql/data
        name: postgresql-data
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-bdpks
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-rjm8v
    nodeName: node6.acc.internal
    nodeSelector:
      env: users
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1001890000
      seLinuxOptions:
        level: s0:c43,c42
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    volumes:
    - name: postgresql-data
      persistentVolumeClaim:
        claimName: postgresql
    - name: default-token-bdpks
      secret:
        defaultMode: 420
        secretName: default-token-bdpks
  status:
    phase: Pending
    qosClass: Burstable
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      kubectl.kubernetes.io/original-replicas: "1"
      openshift.io/deployer-pod.completed-at: 2018-03-21 15:52:38 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-03-21 15:52:32 +0000 UTC
      openshift.io/deployer-pod.name: gogs-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: gogs
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"gogs","namespace":"bc-gogs","selfLink":"/apis/apps.openshift.io/v1/namespaces/bc-gogs/deploymentconfigs/gogs","uid":"ddd5f90a-2d1f-11e8-9d34-166b4f376a2c","resourceVersion":"715941","generation":2,"creationTimestamp":"2018-03-21T15:52:32Z","labels":{"app":"gogs"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Rolling","rollingParams":{"updatePeriodSeconds":1,"intervalSeconds":1,"t [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: gogs
      openshift.io/deployment-config.name: gogs
    name: gogs-1
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: gogs
      uid: ddd5f90a-2d1f-11e8-9d34-166b4f376a2c
  spec:
    replicas: 0
    selector:
      app: gogs
      deployment: gogs-1
      deploymentconfig: gogs
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: gogs
          openshift.io/deployment.name: gogs-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: gogs
          deployment: gogs-1
          deploymentconfig: gogs
      spec:
        containers:
        - image: wkulhanek/gogs@sha256:783b5d5886ce83fa847e4b5d43700283bd4bfa59eb3c9beaad2221643b1c2785
          imagePullPolicy: IfNotPresent
          name: gogs
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: gogs-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: gogs-volume-1
  status:
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      kubectl.kubernetes.io/original-replicas: "1"
      openshift.io/deployer-pod.completed-at: 2018-03-21 15:53:02 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-03-21 15:52:54 +0000 UTC
      openshift.io/deployer-pod.name: gogs-2-deploy
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: gogs
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: ""
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"gogs","namespace":"bc-gogs","selfLink":"/apis/apps.openshift.io/v1/namespaces/bc-gogs/deploymentconfigs/gogs","uid":"ddd5f90a-2d1f-11e8-9d34-166b4f376a2c","resourceVersion":"716074","generation":3,"creationTimestamp":"2018-03-21T15:52:32Z","labels":{"app":"gogs"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Rolling","rollingParams":{"updatePeriodSeconds":1,"intervalSeconds":1,"t [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: gogs
      openshift.io/deployment-config.name: gogs
    name: gogs-2
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: gogs
      uid: ddd5f90a-2d1f-11e8-9d34-166b4f376a2c
  spec:
    replicas: 0
    selector:
      app: gogs
      deployment: gogs-2
      deploymentconfig: gogs
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "2"
          openshift.io/deployment-config.name: gogs
          openshift.io/deployment.name: gogs-2
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: gogs
          deployment: gogs-2
          deploymentconfig: gogs
      spec:
        containers:
        - image: wkulhanek/gogs@sha256:783b5d5886ce83fa847e4b5d43700283bd4bfa59eb3c9beaad2221643b1c2785
          imagePullPolicy: IfNotPresent
          name: gogs
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: gogs-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: gogs-volume-1
          persistentVolumeClaim:
            claimName: gogs-data
  status:
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2018-03-21 15:56:05 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-03-21 15:55:58 +0000 UTC
      openshift.io/deployer-pod.name: gogs-3-deploy
      openshift.io/deployment-config.latest-version: "3"
      openshift.io/deployment-config.name: gogs
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: ""
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"gogs","namespace":"bc-gogs","selfLink":"/apis/apps.openshift.io/v1/namespaces/bc-gogs/deploymentconfigs/gogs","uid":"ddd5f90a-2d1f-11e8-9d34-166b4f376a2c","resourceVersion":"717275","generation":4,"creationTimestamp":"2018-03-21T15:52:32Z","labels":{"app":"gogs"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Rolling","rollingParams":{"updatePeriodSeconds":1,"intervalSeconds":1,"t [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: gogs
      openshift.io/deployment-config.name: gogs
    name: gogs-3
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: gogs
      uid: ddd5f90a-2d1f-11e8-9d34-166b4f376a2c
  spec:
    replicas: 1
    selector:
      app: gogs
      deployment: gogs-3
      deploymentconfig: gogs
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "3"
          openshift.io/deployment-config.name: gogs
          openshift.io/deployment.name: gogs-3
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: gogs
          deployment: gogs-3
          deploymentconfig: gogs
      spec:
        containers:
        - image: wkulhanek/gogs@sha256:783b5d5886ce83fa847e4b5d43700283bd4bfa59eb3c9beaad2221643b1c2785
          imagePullPolicy: IfNotPresent
          name: gogs
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: gogs-volume-1
          - mountPath: /opt/gogs/custom/conf
            name: config-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: gogs-volume-1
          persistentVolumeClaim:
            claimName: gogs-data
        - configMap:
            defaultMode: 420
            name: gogs
          name: config-volume
  status:
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2018-03-21 15:53:07 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-03-21 15:52:24 +0000 UTC
      openshift.io/deployer-pod.name: postgresql-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: postgresql
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"postgresql","namespace":"bc-gogs","selfLink":"/apis/apps.openshift.io/v1/namespaces/bc-gogs/deploymentconfigs/postgresql","uid":"d91404b4-2d1f-11e8-9d34-166b4f376a2c","resourceVersion":"715863","generation":2,"creationTimestamp":"2018-03-21T15:52:24Z","labels":{"app":"postgresql_gogs","template":"postgresql-persistent-template"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp","template.alpha.openshift.io/wait-f [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: postgresql_gogs
      openshift.io/deployment-config.name: postgresql
      template: postgresql-persistent-template
    name: postgresql-1
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: postgresql
      uid: d91404b4-2d1f-11e8-9d34-166b4f376a2c
  spec:
    replicas: 1
    selector:
      deployment: postgresql-1
      deploymentconfig: postgresql
      name: postgresql
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: postgresql
          openshift.io/deployment.name: postgresql-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: postgresql_gogs
          deployment: postgresql-1
          deploymentconfig: postgresql
          name: postgresql
      spec:
        containers:
        - env:
          - name: POSTGRESQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: postgresql
          - name: POSTGRESQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: postgresql
          - name: POSTGRESQL_DATABASE
            valueFrom:
              secretKeyRef:
                key: database-name
                name: postgresql
          image: registry.access.redhat.com/rhscl/postgresql-95-rhel7@sha256:de66da4812f0de42cee0bef65899d75f8b1a7440858271f133c8f73c80be663d
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          name: postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
                'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: postgresql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql
  status:
    replicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: gogs
    name: gogs
  spec:
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: gogs
      deploymentconfig: gogs
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
    creationTimestamp: null
    labels:
      app: postgresql_gogs
      template: postgresql-persistent-template
    name: postgresql
  spec:
    ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      name: postgresql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
